--- a/product_details/src/main/res/drawable/bg_save.xml
+++ b/product_details/src/main/res/drawable/bg_save.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="330dp" />
-    <solid android:color="#010035" />
+    <corners android:radius="110dp" />
+    <solid android:color="#FF6E4E" />
 </shape>
